tests/miniJava/neg/000206_mutation.MiniJava
class java { public static String Main ( String [ ] java ) { { } } }
